--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Story generator for seeding new tales"
     />
+    <link href="https://fonts.googleapis.com/css?family=Milonga|Solway&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
