--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Story generator for seeding new tales"
     />
     <link href="https://fonts.googleapis.com/css?family=Milonga|Solway&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/src/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
